[package]
name = "remu"
version = "0.1.0"
edition = "2021"
authors = ["REMU Contributors"]
description = "A complete RISC-V32IM emulator written in Rust"

[features]
default = ["trace"]
device = ["dep:sdl2"]  # Only include SDL2 when device feature is enabled
trace = []
difftest = []

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities  
lazy_static = "1.4"
byteorder = "1.5"

# Optional dependencies
sdl2 = { version = "0.37", optional = true }
memmap2 = { version = "0.9", optional = true }

# Logging (optional, for fallback)
log = "0.4"
goblin = "0.10.4"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true
